--- a/playground/templates/hello.html
+++ b/playground/templates/hello.html
@@ -5,10 +5,11 @@
         {% else %}
         <h1>Hello World</h1>
         {% endif %}
-        <ul>
-            {% for product in products %}
-            <li>{{ product.title }} - {{product.collection.title}}</li>
+        {% comment %} <ul>
+            {% for order in orders %}
+            <li>{{ order.id }} - {{order.customer.first_name}}</li>
             {% endfor %}
-        </ul>
+        </ul> {% endcomment %}
+        
     </body>
 </html>
